--- a/docs/style.css
+++ b/docs/style.css
@@ -262,6 +262,7 @@ nav {
     font-size: 2.5rem;
     margin-bottom: 1.5rem;
     display: block;
+    color: var(--secondary-color);
 }
 
 /* How It Works Section */
